--- a/templates/create_phone.html
+++ b/templates/create_phone.html
@@ -15,7 +15,7 @@
 		</div>
 		<hr>
 		<div class="jumbotron">
-			<a href="{{phone_url}}">{{phone_url}}</a>
+			{{phone_url}}
 		</div>
 	</div>
 	<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
