--- a/templates/index.html
+++ b/templates/index.html
@@ -16,40 +16,27 @@
 		<hr>
 		<div class="content">
 			<h3>Create phone number:</h3>
-			<form method="POST" action="/create_phone">
-				<div class="row">
-					<div class="col-lg-6">
+			<div class="row">
+				<div class="col-lg-6">
+					<form method="POST" action="/create_phone">
 						<input type="text" class="form-control" id="google_docs_url" name="google_docs_url" placeholder="Google Docs Form URL" data-original-title="Make sure all elements are optional and that the URL ends with '/viewform'">
-						<!-- https://docs.google.com/forms/d/13e8WNQePgFPhvP45_QU9WFsgcgkRtOAuTpcBjnx-Zh4/viewform -->
-					</div>
-					<div class="col-lg-4 left"></div>
-					<div class="col-lg-2"></div>
-				</div>
-				<div class="row">
-					<div class="col-lg-6">
+							<!-- https://docs.google.com/forms/d/13e8WNQePgFPhvP45_QU9WFsgcgkRtOAuTpcBjnx-Zh4/viewform -->
 						<input type="text" class="form-control" id="success_msg" name="success_msg" placeholder="Success Message" data-original-title="Thanks! Your email has been logged :)">
-					</div>
-					<div class="col-lg-4 left"></div>
-					<div class="col-lg-2"></div>
-				</div>
-				<div class="row">
-					<div class="col-lg-6">
 						<input type="text" class="form-control" id="failure_msg" name="failure_msg" placeholder="Failure Message" data-original-title="Sorry, that doesn't look like an email">
-					</div>
-					<div class="col-lg-4 left"></div>
-					<div class="col-lg-2"></div>
+						<br>
+						<button class="btn btn-lg btn-primary" type="submit">Create!</button>
+					</form>
 				</div>
-				<br>
-				<div class="row">
-					<div class="col-lg-6">
-						<div class="submit">
-							<button class="btn btn-lg btn-primary" type="submit">Create!</button>
-						</div>
-					</div>
-					<div class="col-lg-4 left"></div>
-					<div class="col-lg-2"></div>
+				<div class="col-lg-6">
+					<h4>Instructions:</h4>
+					<ol>
+						<li>Create a Google Docs form with the elements "Phone", "Email", "City", "State" (case-sensitive)</li>
+						<li>Ensure that all elements are optional</li>
+						<li>Make sure the URL ends with '/viewform'</li>
+						<li>Enter in the info to the left, and click create!</li>
+					</ol>
 				</div>
-			</form>
+			</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
