--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 				<div class="col-lg-6">
 					<h4>Instructions:</h4>
 					<ol>
-						<li>Create a Google Docs form with the elements "Phone", "Email", "City", "State" (case-sensitive)</li>
+						<li>Create a Google Docs form with the text elements "Phone", "Email", "City", "State" (case-sensitive)</li>
 						<li>Ensure that all elements are optional</li>
 						<li>Make sure the URL ends with '/viewform'</li>
 						<li>Enter in the info to the left, and click create!</li>
